[workspace]
members = [".", "tower-sessions-core", "memory-store"]
resolver = "2"

[workspace.package]
version = "0.13.0"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/maxcountryman/tower-sessions"
keywords = ["axum", "session", "sessions", "cookie", "tower"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/tower-sessions"
documentation = "https://docs.rs/tower-sessions"
readme = "README.md"

[package]
name = "tower-sessions"
description = "🥠 Sessions as a `tower` and `axum` middleware."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[workspace.dependencies]
tower-sessions = { version = "=0.13.0", path = ".", default-features = false }
tower-sessions-core = { version = "=0.13.0", path = "tower-sessions-core" }
tower-sessions-memory-store = { version = "=0.13.0", path = "memory-store" }

time = "0.3.30"
tokio = { version = "1.32.0", default-features = false }

[features]
memory-store = ["tower-sessions-memory-store"]
extractor = ["dep:axum-core", "dep:async-trait"]

[dependencies]
async-trait = { version = "0.1.74", optional = true }
axum-core = { version = "0.4", optional = true }
cookie = "0.18.1"
http = "1.0"
pin-project-lite = "0.2.14"
time = { workspace = true, features = ["serde"] }
tower-layer = "0.3.2"
tower-service = "0.3.2"
tower-sessions-core = { workspace = true }
tower-sessions-memory-store = { workspace = true, optional = true }
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
anyhow = "1"
axum = "0.7.1"
axum-core = "0.4.0"
http = "1.0"
http-body-util = "0.1"
hyper = "1.0"
time = { workspace = true }
tokio = { version = "1.32.0", features = ["full"] }
tower = { version = "0.5.0", features = ["util"] }
tower-sessions-core = { workspace = true }
tower-sessions-memory-store = { workspace = true }

[[example]]
name = "counter"
required-features = ["memory-store"]
