[package]
name = "tower-sessions-memory-store"
description = "Memory session store. Not for direct use; see the `tower-sessions` crate for details."
documentation.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tower-sessions-core = { workspace = true }
tokio = { workspace = true }
time = { workspace = true }
rand = "0.8.5"

[dev-dependencies]
tower-sessions = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
