[package]
name = "tower-sessions-moka-store"
description = "Moka session store. Not for direct use; see the `tower-sessions` crate for details."
documentation.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
moka = { version = "0.12.0", features = ["future"] }
time = { workspace = true }
tower-sessions-core = { workspace = true }

[dev-dependencies]
tower-sessions = { workspace = true }
