[package]
name = "tower-sessions-mongodb-store"
description = "MongoDB session store. Not for direct use; see the `tower-sessions` crate for details."
documentation.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
bson = { version = "2.7.0", features = ["time-0_3"] }
mongodb = { version = "2.7.0" }
rmp-serde = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tower-sessions-core = { workspace = true }

[dev-dependencies]
tower-sessions = { workspace = true }
tokio-test = "0.4.3"
