[package]
name = "tower-sessions-sqlx-store"
description = "SQLx session stores. Not for direct use; see the `tower-sessions` crate for details."
documentation.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
async-trait = { workspace = true }
rmp-serde = { workspace = true }
sqlx = { version = "0.7.2", features = ["time", "uuid", "runtime-tokio"] }
thiserror = { workspace = true }
time = { workspace = true }
tower-sessions-core = { workspace = true }

[dev-dependencies]
tower-sessions = { workspace = true }
tokio-test = "0.4.3"
