[package]
name = "tower-sessions-core"
description = "Core types and traits for tower-sessions."
documentation.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[features]
default = []
id-access = []
random-id = ["dep:rand"]

[dependencies]
time = { version = "0.3.36", features = ["serde"] }
base64 = "0.22.0"
futures-util = { version = "0.3.30", default-features = false }
serde = { workspace = true, features = ["derive"] }
either = "1.13"
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
tower-sessions = { workspace = true, features = [] }
tokio-test = "0.4.3"
tokio = { workspace = true, features = ["rt", "macros"] }
mockall = "0.13.0"
